<?xml version="1.0"?>
<package format="2">
    <name>dbow2</name>
    <version>0.0.0</version>
    <description>The dbow2 package</description>
    <maintainer email="tanzby@outlook.com">iceytan</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <export></export>
</package>
