<?xml version="1.0"?>
<package format="2">
    <name>g2o</name>
    <version>0.0.0</version>
    <description>The g2o package</description>
    <maintainer email="tanzby@outlook.com">iceytan</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <export></export>
</package>
