<?xml version="1.0"?>
<package format="2">
    <name>orb_slam2_ros</name>
    <version>0.0.0</version>
    <description>The ros interface of orb_slam2 package</description>
    <maintainer email="tanzby@outlook.com">iceytan</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>orb_slam2_core</depend>

    <export></export>
</package>
